tests/models/enum/named/i64/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: i64
    },
}
fn main() {}
